--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
+    <title>赛课</title>
 
 
     <!-- compiled css output -->
@@ -15,6 +16,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
+    <script src="js/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <script src="lib/ion-tree-list/ion-tree-list.js"></script>
 
